# storm-framework

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  README_ID.md  SECURITY.md  pyproject.toml  rootmap.py  setup  storm  versi.py
.cargo/: config.toml
.github/: SECURITY.md
.github/workflows/: review-app.yml  review-pr.yml
Storm_Framework.egg-info/: SOURCES.txt  requires.txt  top_level.txt
app/banners/: banner.py
app/base/: check.rs  config_ui.py  config_update.py
app/utility/: colors.py  down_ghunt.py  down_osint.py  restart.py  search.py  spin.py  update.py  utils.py  verify.py
app/utility/module/: down_ghosint.py  down_osint.py
assets/wordlist/: userpass.py
example/: excve.py  exmod.py
lib/core/: handler.py
lib/core/commands/: about.py  back.py  clear.py  down.py  exit.py  help.py  info.py  run.py  search.py  set.py  show.py  storm.py  use.py
lib/smf/ssl/: netssl.py
lib/ui/banners/: data1.py  data2.py  data3.py
lib/ui/core/: __init__.py
modules/auxiliary/: example_mod.py
modules/auxiliary/sniffer/: dpispy.py
modules/auxiliary/voip/: rtp_sniff.py  sip_dos.py  sip_scan.py
modules/exploit/: example_mod.py
modules/vulnerability/: example_cve.py
modules/vulnerability/asn/: cve_2026_23490.py
modules/vulnerability/fortinet/: cve_2024_55591.py
modules/vulnerability/oracle/: cve_2026_21975.py
scripts/: compiler.py
scripts/cpl/: advcore.py  compiler.py  ioname.py
scripts/security/: Cargo.toml  Makefile  sign.py
scripts/security/src/: integrity.rs  test.rs
tests/: test_modules.py  test_verify_integrity.py
(+36 files in other folders)
