[project]
name = "Storm-Framework"
version = "3.5.11"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Elzy", email = "elzyproot@protonmail.com"}
]
dependencies = [
    "cryptography==46.0.4",
    "requests==2.32.5",
    "urllib3==2.6.3",
    "colorama==0.4.6",
    "python-nmap==0.7.1",
    "python-whois==0.9.6",

    "dnspython==2.8.0",
    "paramiko==4.0.0",
    "scapy==2.7.0",

    "ipwhois==1.3.0",
    "ipaddress==1.0.23",
    "whoisdomain==1.20260106.1",
    "telnetlib3==4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

# Forcefully override .gitignore rules
include = '(app/|modules/|lib/).*\.py$'

# Keep the metadata folder safe
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | lib/smf/core/db/vendor
)/
'''

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "assets", "lib", "modules", "script"]
